--- a/training/05_updating_a_data_package.Rmd
+++ b/training/05_updating_a_data_package.Rmd
@@ -1,6 +1,6 @@
-# Update a data package
+# Updating a data package
 
-This chapter will teach you how to edit an existing data package in R. Earlier, we updated metadata. In this section we will learn how to update a data file, and how to update a package by adding an additional data file.
+This chapter will teach you how to edit and update an existing data package in R. Earlier, we updated metadata. In this section we will learn how to update a data file, and how to update a package by adding an additional data file.
 
 ```{r, child = '../workflows/edit_data_packages/update_an_object.Rmd'}
 ```
