--- a/workflows/edit_eml/format_text.Rmd
+++ b/workflows/edit_eml/format_text.Rmd
@@ -1,4 +1,5 @@
 ## Format text in EML
+
 Currently, only certain fields (abstracts, methods) support text formatting in EML. Check out this [demo](https://github.nceas.ucsb.edu/KNB/arctic-data/blob/ac4cabed2ee9ff3654130ee162266174fafa003a/datateam/How_To/EML/EMl_textType_example.xml) for a full example. Additional info is also available [here](https://knb.ecoinformatics.org/#external//emlparser/docs/eml-2.1.1/./eml-text.html).
 
 Also note, you will need to [edit an EML section with EML](#edit-eml-with-eml) in order to use these workflows.
@@ -8,6 +9,7 @@ Many of these formatting functions only work when enclosed by `<para></para>`
 ```
 
 ### Type-setting
+
 Subscripts, superscripts, and italics:
     
 ```
@@ -17,7 +19,8 @@ Subscripts, superscripts, and italics:
 ```
 
 ### Links
-Be sure to incluse the "https://" before the link or it will redirect incorrectly. Also, always check that your links go through to the correct page. Please be aware that most links are inherently unstable so always default to archiving files over pointing to websites when possible and appropriate. 
+
+Be sure to include the "https://" before the link or it will redirect incorrectly. Also, always check that your links go through to the correct page. Please be aware that most links are inherently unstable so always default to archiving files over pointing to websites when possible and appropriate. 
 
 ```
 <ulink url="https://some_url.com">
@@ -26,7 +29,8 @@ Be sure to incluse the "https://" before the link or it will redirect incorrectl
 ```
 
 ### Lists
-Unordered (bulletted) lists:
+
+Unordered (bulleted) lists:
     
 ```
 <itemizedlist>
