--- a/workflows/edit_eml/set_parties.Rmd
+++ b/workflows/edit_eml/set_parties.Rmd
@@ -10,7 +10,7 @@ NCEASadd <- new("address",
                 postalCode = '93101')
 ```
 
-The `creator`, `contact`, and `associatedParty` classes can easily be created using functions from the `arcticdatautils` package. Here, we use `eml_creator` to set our data set `creator`.
+The `creator`, `contact`, and `associatedParty` classes can easily be created using functions from the `arcticdatautils` package. Here, we use `eml_creator()` to set our data set `creator`.
 
 ```{r, eval = FALSE}
 JC_creator <- arcticdatautils::eml_creator(given_names = "Jeanette", 
@@ -56,4 +56,3 @@ JG_ap <- arcticdatautils::eml_associated_party(given_names = "Jesse",
                                                role = "metaataProvider")
 eml@dataset@associatedParty <- c(JG_ap)
 ```
-
