--- a/training/03_exploring_eml.Rmd
+++ b/training/03_exploring_eml.Rmd
@@ -1,4 +1,4 @@
-# Explore EML
+# Exploring EML
 
 We use the Ecological Metadata Language (EML) to store structured metadata for all datasets submitted to the Arctic Data Center. EML is written in XML (extensible markup language) and functions for building and editing EML are in the <a href = 'https://github.com/ropensci/EML' target='_blank'>EML R package</a>.
 
