--- a/workflows/edit_data_packages/get_package_and_eml.Rmd
+++ b/workflows/edit_data_packages/get_package_and_eml.Rmd
@@ -25,11 +25,10 @@ When editing data packages, you always want to be working with the most recent u
 all_rm_versions &lt;-<span class="st"> </span><span class="op"></span><span class="kw">get_all_versions</span>(adc_test, rm_pid_original)
 rm_pid &lt;-<span class="st"> </span>all_rm_versions[<span class="kw">length</span>(all_rm_versions)]
 print(rm_pid)</code></pre>
-
 ```
 
 ``` {r, eval = FALSE, echo = FALSE}
-# Code Used to generate HTML in note above
+# Code used to generate HTML in note above
 rm_pid_original <- "your_original_resource_map_pid"
 all_rm_versions <- get_all_versions(adc_test, rm_pid_original)
 rm_pid <- all_rm_versions[length(all_rm_versions)]
