--- a/workflows/edit_data_packages/set_rights_and_access.Rmd
+++ b/workflows/edit_data_packages/set_rights_and_access.Rmd
@@ -1,9 +1,8 @@
 ## Set rights and access
 
-One final step when creating/updating packages is to make sure that the rights and access on all the objects that were uploaded are set correctly within the sysmeta. The function `arcticdatautils::set_rights_and_access` will set both, and `arcticdatautils::set_access` will just set access. There are two functions for this because a `rightsHolder` should always have access, but not all people who need access are `rightsHolder`s. The `rightsHolder` of the data package is typically the `submitter` (if the data set is submitted through the web form ("editor")), but if a data team member is publishing objects for a PI, the `rightsHolder` should be the main point of contact for the data set (i.e. the person who requested that we upload the data for them). 
+One final step when creating/updating packages is to make sure that the rights and access on all the objects that were uploaded are set correctly within the sysmeta. The function `arcticdatautils::set_rights_and_access()` will set both, and `arcticdatautils::set_access()` will just set access. There are two functions for this because a `rightsHolder` should always have access, but not all people who need access are `rightsHolder`s. The `rightsHolder` of the data package is typically the `submitter` (if the data set is submitted through the web form ("editor")), but if a data team member is publishing objects for a PI, the `rightsHolder` should be the main point of contact for the data set (i.e. the person who requested that we upload the data for them). 
 
-To set the rights and access for all of the objects in a [package](#get-package-and-eml), first get the ORCiD of the person to whom you are giving rights and access.
-You can set this manually, or grab it from one of the creators in an EML file. You can look up ORCID iDs [here](https://orcid.org/orcid-search/search). 
+To set the rights and access for all of the objects in a [package](#get-package-and-eml), first get the ORCiD of the person to whom you are giving rights and access. You can set this manually, or grab it from one of the creators in an EML file. You can look up ORCID iDs [here](https://orcid.org/orcid-search/search). 
 
 ```{r, eval = FALSE}
 # Manually set ORCiD
@@ -15,7 +14,7 @@ You can set this manually, or grab it from one of the creators in an EML file. Y
  subject <- sub("^https://", "http://", subject)
 ```
 
-Note, when setting metadata, the ORCiD must start with `http://`. ORCiDs in EML should start with `https://`. The `sub` command above will change this formatting for you.
+Note, when setting metadata, the ORCiD must start with `http://`. ORCiDs in EML should start with `https://`. The `sub()` command above will change this formatting for you.
 
 Next, set the rights and access using the following command:
 
@@ -26,7 +25,7 @@ set_rights_and_access(adc_test,
                       permissions = c('read','write','changePermission'))
 ```
 
-If you ever need to remove/add public access to your package or object, you can use `remove_public_read` or `set_public_read`, respectively. 
+If you ever need to remove/add public access to your package or object, you can use `remove_public_read()` or `set_public_read()`, respectively.
 
 ```{r eval = FALSE}
 remove_public_read(adc_test, c(pkg$metadata, pkg$data, pkg$resource_map))
