--- a/workflows/edit_eml/set_physical.Rmd
+++ b/workflows/edit_eml/set_physical.Rmd
@@ -14,7 +14,7 @@ physical <- arcticdatautils::pid_to_eml_physical(mn, "your_data_pid")
 
 The `physical` must then be assigned to the data object.
 
-A final, but not recommended option, is to set the `physical` by hand. To do so, one can use a workflow similar to the one below. However, the far superior workflow is to [publish](#publish-an-object) or [update](#update-a-data-file) your data first and then use `pid_to_eml_physical` to set the `physical`.
+A final, but not recommended option, is to set the `physical` by hand. To do so, one can use a workflow similar to the one below. However, the far superior workflow is to [publish](#publish-an-object) or [update](#update-a-data-file) your data first and then use `pid_to_eml_physical()` to set the `physical`.
 
 ```{r, eval = FALSE}
 id <- 'your_data_pid' # this should be an actual PID
