--- a/workflows/pi_correspondence/A_email_templates.Rmd
+++ b/workflows/pi_correspondence/A_email_templates.Rmd
@@ -1,10 +1,10 @@
-## Email Templates
+## Email templates
 
 Please think critically when using these canned replies rather than just blindly sending them. Typically, content should be adjusted/ customized for each response to be as relevant, complete, and precise as possible.  
 
 Always run email drafts by Jesse and Dom via a direct (group) message in Slack and please get approval before sending.
 
-Remeber to consult the [submission guidelines](https://arcticdata.io/submit/) for details of what is expected.  
+Remember to consult the [submission guidelines](https://arcticdata.io/submit/) for details of what is expected.  
 
 ```{r, echo = FALSE}
 chapter <- "email_templates/"
@@ -14,4 +14,3 @@ children <- paste0(chapter, sections)
 
 ```{r, child = children}
 ```
-
