--- a/workflows/pi_correspondence/email_templates_pi_faqs.Rmd
+++ b/workflows/pi_correspondence/email_templates_pi_faqs.Rmd
@@ -1,4 +1,4 @@
-## PI FAQ Email Templates
+## PI FAQ email templates
 
 *Q: Can I replace data that have already been uploaded and keep the DOI?*  
 > A: Once you have published your data with the Arctic Data Center, it can still be updated by providing an additional version which can replace the original, while still preserving the original and making it available to anyone who might have cited it. To update your data, return to the data submission tool used to submit it, and provide an update.
